--- a/docs/support-file/helm/Chart.yaml
+++ b/docs/support-file/helm/Chart.yaml
@@ -2,7 +2,7 @@ name: bk-hcm-oa
 apiVersion: v2
 description: A full stack chart for HCM Enterprise products.
 type: application
-version: 1.0.51
+version: 1.0.51-alpha.1
 appVersion: 1.7.2.0-alpha.1
 dependencies:
   - name: common
