--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -13,7 +13,7 @@ image:
   registry: docker-repo.bk.tencent.com/bk-hcm/oa-image
   pullPolicy: IfNotPresent
   pullSecrets: []
-  tag: 1.7.2.4
+  tag: 1.7.3.0
 
 serviceAccount:
   create: true
@@ -986,10 +986,7 @@ egress:
   enabled: true
   replicasNum: 2
   podCidrs:
-    - 9.0.0.0/8
-    - 10.0.0.0/8
-    - 11.0.0.0/8
-    - 30.0.0.0/8
+    - 127.0.0.0/8 # 示例，请修改为实际网段
   rules:
     - dport: 80
       host: example.com
